--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                     <a href="">SERVICES</a>
 
                     <a href="contact.html">CONTACT US</a>
-                    <a href="" class="optional">BLOG</a>
+                    <a href="blog.html" class="optional">BLOG</a>
 
                 </ul>
             </div>
@@ -120,7 +120,7 @@
                     <label for="sangeet">Sangeet</label>
 
                     <input type="checkbox" id="wedding" name="functions" value="wedding">
-                    <label for="wedding">Wedding</label>
+                    <label for="wedding">Wedding &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
 
                     <input type="checkbox" id="cocktail" name="functions" value="cocktail">
                     <label for="cocktail">Cocktail Party</label>
